--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@types/validator": "^13.11.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "firebase-admin": "^12.0.0",
+    "nodemon": "^3.1.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -21,6 +24,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "vercel": "vercel dev",
+    "db": "firebase emulators:start" 
   }
 }
