--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "firebase-admin": "^12.0.0",
     "nodemon": "^3.1.0",
     "validator": "^13.11.0"
@@ -26,6 +27,6 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "vercel": "vercel dev",
-    "db": "firebase emulators:start" 
+    "db": "firebase emulators:start"
   }
 }
