--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "firebase-admin": "^12.0.0",
+    "mailgun.js": "^10.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
