Added service account key as environmental variable

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "openpgp": "^5.11.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
