--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -30,4 +31,3 @@ firebase-debug.log
 firestore-debug.log
 pubsub-debug.log
 ui-debug.log
-/credentials/*
