--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "vercel": "vercel dev",
-    "db": "firebase emulators:start"
+    "db": "firebase emulators:start",
+    "vercel-build": "echo building"
   }
 }
