--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@now/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/index.js"
-    }
-  ]
+{ 
+  "version": 2, 
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }] 
 }
