--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
-{ 
-  "version": 2, 
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }] 
+{
+  "version": 2,
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
+  "outputDirectory": "dist"
 }
